used standard GML schema instead of profile